--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         env:
           APP_NAME    : "waze-mogilev"
         run : |
-          ifconfig
+          curl https://ipinfo.io/ip
           #scp -o StrictHostKeyChecking=no -P 22 $APP_NAME.zip ubuntu@${{ secrets.DEPLOY_HOST }}:/home/ubuntu/$APP_NAME-${{ github.sha }}.zip
           #ssh -i StrictHostKeyChecking=no -p 22 ubuntu@${{ secrets.DEPLOY_HOST }} 'rm -rf /home/ubuntu/waze && mkdir -p /home/ubuntu/waze'
           #ssh -i StrictHostKeyChecking=no -p 22 ubuntu@${{ secrets.DEPLOY_HOST }} 'cd /home/ubuntu && unzip "$(ls -tr *zip | tail -n1)" -d /home/ubuntu/waze'
